# sutlab

./: .gitignore  CLAUDE.md  README.md  metadata_format.md  pyproject.toml
data/examples/: ta_d_2008.parquet  ta_d_2009.parquet  ta_d_2010.parquet  ta_d_2011.parquet  ta_d_2012.parquet  ta_d_2013.parquet  ta_d_2014.parquet  ta_d_2015.parquet  ta_d_2016.parquet  ta_d_2017.parquet  ta_d_2018.parquet  ta_d_2019.parquet  ta_l_2008.parquet  ta_l_2009.parquet  ta_l_2010.parquet  ta_l_2011.parquet  ta_l_2012.parquet  ta_l_2013.parquet  ta_l_2014.parquet  ta_l_2015.parquet  ta_l_2016.parquet  ta_l_2017.parquet  ta_l_2018.parquet  ta_l_2019.parquet
data/fixtures/: balancing_locks.xlsx  generate.py  ta_d_2021.parquet  ta_d_2022.parquet  ta_l_2021.parquet  ta_l_2022.parquet  (+2 more)
docs/: inspection.md  metadata_format.md  sut_format.md
notebooks/: forunr.txt  laaste_nrnr.xlsx  laaste_produkter.ipynb  scratch.ipynb
sutlab/: __init__.py  balancing.py  compute.py  derive.py  inspect.py  io.py  sut.py
tests/: test_adjust.py  test_aggregate.py  test_balancing.py  test_compute.py  test_derive.py  test_inspect.py  test_inspect_aggregates_nominal.py  test_inspect_balancing_targets.py  test_inspect_display_index.py  test_inspect_display_index_values.py  test_inspect_final_uses.py  test_inspect_industries.py  test_inspect_product_imbalances.py  test_inspect_sort_ids.py  test_inspect_sut_comparison.py  test_inspect_tables_comparison.py  test_inspect_unbalanced_targets.py  test_inspect_write_to_excel.py  test_io.py  test_price_layers_detailed.py  test_price_layers_industries.py  test_sut.py
(+45 files in other folders)
